compiler/tests/en/errors/dead_each.salam
// EXPECT: E068
func main:
    each x in []:
        println x
    end
end
